kubernetes-part2/examples/no-helm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: alexp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alexp-java-app
  template:
    metadata: 
      labels: 
        app: alexp-java-app
    spec:
      containers:
      - name: java-app
        image: plotnikov93av/otus-app:v2
        ports:
          - name: web
            containerPort: 8000
        env :
          - name : DATABASE_URL
            valueFrom:
                secretKeyRef:
                  name: alexp-secret
                  key: DATABASE_URL_JDBC
          - name : POSTGRES_USER
            valueFrom:
              configMapKeyRef:
                name: alexp-config
                key: POSTGRES_USER
          - name : POSTGRES_PASSWORD
            valueFrom:
                secretKeyRef:
                  name: alexp-secret
                  key: POSTGRES_PASSWORD
        livenessProbe:
          httpGet:
            port: 8000
            path: /
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 20
          periodSeconds: 5
