kubernetes-part2/examples/no-helm/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: alexp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp($|/)(.*)
          backend:
            serviceName: alexp-service
            servicePort: 9000
